force-app/main/default/objects/LLC_BI__Pricing_Payment_Component__c/fields/LLC_BI__Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Amount__c</fullName>
    <description>This field is required. It is manually populated. It indicates the amount of the payment for the Pricing Payment Component record.</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>