force-app/main/default/objects/LLC_BI__Pricing_Payment_Component__c/fields/LLC_BI__Base_Principal_Payment_On__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Base_Principal_Payment_On__c</fullName>
    <description>The user manually populates this optional picklist field to determine how the system calculates the principal portion of the payment.</description>
    <inlineHelpText>Select flat amount, percentage of balance, or percentage of outstanding, to determine your principal payment.</inlineHelpText>
    <label>Base Principal Payment On</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Flat Amount</fullName>
            </value>
            <value>
                <fullName>Percent of Balance</fullName>
            </value>
            <value>
                <fullName>Percent of Outstanding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>