force-app/main/default/objects/LLC_BI__Pricing_Payment_Component__c/fields/LLC_BI__Interest_Frequency__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Interest_Frequency__c</fullName>
    <description>--DEPRECATED--</description>
    <label>-D Interest Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Frequency_Monthly</fullName>
            </value>
            <value>
                <fullName>Frequency_Annually</fullName>
                <default>true</default>
                <label>Frequency_Annually</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>