force-app/main/default/objects/LLC_BI__Pricing_Payment_Component__c/fields/LLC_BI__Interest_Payment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Interest_Payment_Frequency__c</fullName>
    <description>This field is required if payment type is not &quot;P&amp;I&quot;. It is manually populated. It indicates the frequency requirements for Interest Payments.</description>
    <label>Interest Payment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Frequency_Monthly</fullName>
                <default>true</default>
                <label>Frequency_Monthly</label>
            </value>
            <value>
                <fullName>Frequency_Annually</fullName>
            </value>
            <value>
                <fullName>Biweekly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>