force-app/main/default/objects/LLC_BI__Pricing_Payment_Component__c/fields/LLC_BI__Is_Fixed__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Fixed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional and is manually populated. It indicates whether or not the payment for a Pricing Payment Component record is fixed.</description>
    <label>Is Fixed</label>
    <type>Checkbox</type>
</CustomField>