force-app/main/default/objects/LLC_BI__Pricing_Payment_Component__c/fields/LLC_BI__Minimum_Payment__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Minimum_Payment__c</fullName>
    <description>The system or user populates this optional number field with the lowest possible payment amount on a payment stream.</description>
    <inlineHelpText>This system or user populated field displays the lowest possible payment amount on a payment stream.</inlineHelpText>
    <label>Minimum Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>