force-app/main/default/objects/LLC_BI__Pricing_Payment_Component__c/fields/LLC_BI__Number_Of_Payments__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Number_Of_Payments__c</fullName>
    <description>The system automatically populates this optional number field with the number of payments made within each payment stream.  By default, it is blank.</description>
    <inlineHelpText>This system-populated field displays the number of payments made within each payment stream.</inlineHelpText>
    <label>Number of Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>