force-app/main/default/objects/LLC_BI__Pricing_Payment_Component__c/fields/LLC_BI__Principal_As_Percent__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Principal_As_Percent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The user manually populates this optional Boolean field. It is false by default. When true, the principal payment amount is calculated via the Percent of Total Loan Amount field.</description>
    <label>Base Payment On</label>
    <type>Checkbox</type>
</CustomField>