force-app/main/default/objects/LLC_BI__Pricing_Payment_Component__c/fields/LLC_BI__Skip_Months__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Skip_Months__c</fullName>
    <description>The user manually populates this optional multiselect picklist field to specify the months they would like to skip in their payment stream.</description>
    <inlineHelpText>Select the months you would like to skip payments.</inlineHelpText>
    <label>Skip Months</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>January</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>February</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>March</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>April</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>May</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>June</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>July</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>August</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>September</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>October</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>November</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>December</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>